--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     >
       <header id="header" class="container">
         <a href="/" class="logo"><img src="./img/лого.svg" alt="logo" /></a>
-        <ul>
+        <ul class="header-list">
           <li><a href="#">Услуги</a></li>
           <li><a href="#">Акции</a></li>
           <li><a href="#">Композиции</a></li>
           <li><a href="#">Подарочные карты</a></li>
           <li><a href="#">Наши партнеры</a></li>
         </ul>
-        <a href="#">+7 (916) 392 17 77</a>
+        <a class="header-number" href="#">+7 (916) 392 17 77</a>
+        <button class="burger-button">
+          <img src="./img/burger-icon.svg" alt="burger-button" />
+        </button>
       </header>
       <section class="main">
         <div class="main-banner">
@@ -261,5 +264,14 @@
         </div>
       </div>
     </section>
+    <footer class="footer container">
+      <ul class="footer-list">
+        <li><a href="#">Cвадебная флористика</a></li>
+        <li><a href="#">Букеты на любые мероприятия</a></li>
+        <li><a href="#">Букеты невесты</a></li>
+        <li><a href="#">Композиции</a></li>
+        <li><a href="#">Оформление мероприятий</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
